Some fixes for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,10 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
 PROJECT(ARy)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
 SET(CMAKE_CXX_STANDARD 11)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-
-SET(OpenCV_STATIC ON)
-
-FIND_PACKAGE(OpenCV REQUIRED core imgproc video calib3d)
-INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR} include)
+FIND_PACKAGE(OpenCV REQUIRED)
+INCLUDE_DIRECTORIES(AFTER "${OpenCV_INCLUDE_DIRS}" "include")
 LINK_LIBRARIES(${OpenCV_LIBS})
 
 SET(SOURCES src/camera.cpp src/localizer.cpp src/keypoints.cpp src/binary.cpp src/tracker.cpp src/utilities.cpp src/complex.cpp)
