--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,5 +1,5 @@
 
 
 ADD_EXECUTABLE(ary_evaluate_markers evaluate_markers.cpp)
-TARGET_LINK_LIBRARIES(ary_evaluate_markers ary)
+TARGET_LINK_LIBRARIES(ary_evaluate_markers ary_static)
 
